--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My name is Talia E and I want to help parents by taking care of kids!"
+      content="Talia & Tots: Parent Helper"
     />
-    <meta property="og:description" content="My name is Talia E and I want to help parents by taking care of kids!"/>
+    <meta property="og:description" content="Talia & Tots: Parent Helper"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Talia & Tots</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
